@@ -2,6 +2,7 @@
 bc-player-closeable-chat=Closeable Chat
 bc-global-chat-history=Global Chat History
 bc-force-chat-history=Force Chat History
+bc-normal-chat-type=Regular Chat Level
 bc-player-chat-history=Your Chat History
 # bc-duplicate-timer=Duplicate timer
 bc-message-linger=Message Linger Age
@@ -24,6 +25,7 @@ bc-debug-color=Debug Color
 [mod-setting-description]
 bc-player-closeable-chat=Whether or not the chat will reprint part of itself to more similarily fake how it naturally behaves when opening and closing chat. This feels horrible with latency, so it's disableable
 bc-force-chat-history=The number of chat messages kept per force. Higher numbers will degrade performance when chatting
+bc-normal-chat-type=How many people will hear a message sent normally
 # bc-duplicate-timer=How many seconds a message is considered a duplicate
 bc-message-linger=How young a message has to be to appear among messages lingering
 bc-images-instead-of-items=Removes trailing text on items, fluids, and entities
@@ -31,7 +33,10 @@ bc-images-instead-of-signals=Removes trailing text on virtual signals
 bc-icon-replacement=What level of chat icons will be replaced with only an image
 bc-color-fade=How faded the message color becomes
 
-# [string-mod-setting]
+[string-mod-setting]
+bc-normal-chat-type-force=Normal
+bc-normal-chat-type-global=Everyone
+bc-normal-chat-type-player=Personal
 # bc-icon-none=Nothing
 # bc-icon-signals=Virtual Signals
 # bc-icon-items=Virtual Signals and Items
@@ -39,11 +44,15 @@ bc-color-fade=How faded the message color becomes
 # bc-icon-almost-everything=Everything, but <unused>
 # bc-icon-everything=Everything
 
+[command-help]
+team=<message> - Sends a message to players in the same force or friendly with yours
+
 [chat-localization]
 colored-text=[color=__2__,__3__,__4__]__1__[/color]
 bc-empty-header=
 bc-message-header=__1__: 
 bc-shout-header=__1__ (shout): 
+bc-team-header=__1__ (team): 
 bc-whisper-to-header=You to __1__: 
 bc-whisper-from-header=__1__ to You: 
 bc-global-history-changed=Global chat history limited to __1__
