@@ -1,7 +1,9 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.4.1
 Date: ????
-  Changes:
+  Features:
+    - Added a global setting to change how normal messages are sent.
+    - Added /t and /team commands to send messages normally.
 ---------------------------------------------------------------------------------------------------
 Version: 0.4.0
 Date: 2024-10-21
